--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,2 +1,6 @@
+RewriteEngine On 
+RewriteCond %{HTTP_HOST} ^example\.com [NC]
+RewriteCond %{SERVER_PORT} 80 
+RewriteRule ^(.*)$ https://www.spreeos.com/$1 [R,L]
 Order deny,allow
 Deny from all
