--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,6 +1,5 @@
-RewriteEngine On 
-RewriteCond %{HTTP_HOST} ^example\.com [NC]
-RewriteCond %{SERVER_PORT} 80 
-RewriteRule ^(.*)$ https://www.spreeos.com/$1 [R,L]
+RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 Order deny,allow
 Deny from all
