--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,5 +1,8 @@
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+#Force www:
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^spreeos.com [NC]
+#RewriteRule ^(.*)$ https://www.spreeos.com/$1 [L,R=301,NC]
+RewriteRule ^(.*)$ http://www.spreeos.com/$1 [L,R=301,NC]
+#RewriteRule ^(.*)$ https://www.spreeos.com [R=302,L]
 Order deny,allow
 Deny from all
