--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,5 +1,5 @@
 RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{www.spreeos.com} [L,R=301,NE]
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
 #Force www:
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^spreeos.com [NC]
