--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-public_html/app/etc/local.xml
-public_html/var/*
-public_html/var
+app/etc/local.xml
+var/*
+var
 .bash_history
-public_html/media
-public_html/media/*
-public_html/.ssh
-public_html/.viminfo
+media
+media/*
+.ssh
+.viminfo
